bubba-frontend (2.1~pre19) vincent hugo; urgency=low

  * Migrate inifiles for libbubba-php-info as well
    (This stopped image building)
  * Fix some typos in language files

 -- Tor Krill <tor@excito.com>  Wed, 01 Sep 2010 10:03:10 +0200

bubba-frontend (2.1~pre18) vincent hugo; urgency=low

  * Don't set errexit on postinst 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:49:09 +0200

bubba-frontend (2.1~pre17) vincent hugo; urgency=low

  * Debug 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:32:39 +0200

bubba-frontend (2.1~pre16) vincent hugo; urgency=low

  * Disable wlan settings if user has not set a timezone 

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:20:17 +0200

bubba-frontend (2.1~pre15) hugo vincent; urgency=low

  * First commit of changing Bubba to B3 

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 12:53:33 +0200

bubba-frontend (2.1~pre14) hugo vincent; urgency=low

  * Added dep on libbubba-info-php

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 09:09:52 +0200

bubba-frontend (2.1~pre13) hugo vincent; urgency=low

  * Allowing users to add images to album from file manager. (Closes: #1509)

 -- PA Nilsson <pa@excito.com>  Wed, 25 Aug 2010 10:50:35 +0200

bubba-frontend (2.1~pre12) vincent; urgency=low

  * Fixed FTP status indication / reload problems. (Closes:# 1502)

 -- PA Nilsson <pa@excito.com>  Thu, 19 Aug 2010 14:27:04 +0200

bubba-frontend (2.1~pre11) vincent; urgency=low

  * Fix bus parsing. (Closes: #1494)
  * Fix blkid detection to bypass caches (Closes: #1493) 

 -- Tor Krill <tor@excito.com>  Wed, 18 Aug 2010 15:29:29 +0200

bubba-frontend (2.1~pre10) vincent; urgency=low

  * Fixed php-error in backup-page. (Closes: #1497)

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 10:24:49 +0200

bubba-frontend (2.1~pre9) vincent; urgency=low

  * Fixed admin rights for album.

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 09:18:05 +0200

bubba-frontend (2.1~pre8) lucid; urgency=low
